--- a/rhpam-config/7.13.0/common.yaml
+++ b/rhpam-config/7.13.0/common.yaml
@@ -464,6 +464,15 @@ console:
         tls:
           insecureEdgeTerminationPolicy: Redirect
           termination: "[[.Console.TerminationRoute.Termination]]"
+          #[[if ne .Console.TerminationRoute.Key ""]]
+          key: "[[.Console.TerminationRoute.Key]]"
+          #[[end]]
+          #[[if ne .Console.TerminationRoute.Certificate ""]]
+          certificate: "[[.Console.TerminationRoute.Certificate]]"
+          #[[end]]
+          #[[if ne .Console.TerminationRoute.CaCertificate ""]]
+          caCertificate: "[[.Console.TerminationRoute.CaCertificate]]"
+          #[[end]]
         #[[end]]
 ## KIE smartrouter BEGIN
 smartRouter:
@@ -696,6 +705,15 @@ smartRouter:
         tls:
           insecureEdgeTerminationPolicy: Redirect
           termination: "[[.SmartRouter.TerminationRoute.Termination]]"
+          #[[if ne .SmartRouter.TerminationRoute.Key ""]]
+          key: "[[.SmartRouter.TerminationRoute.Key]]"
+          #[[end]]
+          #[[if ne .SmartRouter.TerminationRoute.Certificate ""]]
+          certificate: "[[.SmartRouter.TerminationRoute.Certificate]]"
+          #[[end]]
+          #[[if ne .SmartRouter.TerminationRoute.CaCertificate ""]]
+          caCertificate: "[[.SmartRouter.TerminationRoute.CaCertificate]]"
+          #[[end]]
         #[[end]]
 ## KIE smartrouter END
 ## KIE Servers BEGIN
@@ -1275,6 +1293,15 @@ servers:
           tls:
             insecureEdgeTerminationPolicy: Redirect
             termination: "[[.TerminationRoute.Termination]]"
+            #[[if ne .TerminationRoute.Key ""]]
+            key: "[[.TerminationRoute.Key]]"
+            #[[end]]
+            #[[if ne .TerminationRoute.Certificate ""]]
+            certificate: "[[.TerminationRoute.Certificate]]"
+            #[[end]]
+            #[[if ne .TerminationRoute.CaCertificate ""]]
+            caCertificate: "[[.TerminationRoute.CaCertificate]]"
+            #[[end]]
           #[[end]]
       ## KIE server routes END
 #[[end]]
