--- a/rhpam-config/7.13.0/pim/process-migration.yaml
+++ b/rhpam-config/7.13.0/pim/process-migration.yaml
@@ -271,6 +271,15 @@ processMigration:
         tls:
             insecureEdgeTerminationPolicy: Redirect
             termination: "[[.ProcessMigration.TerminationRoute.Termination]]"
+            #[[if ne .ProcessMigration.TerminationRoute.Key ""]]
+            key: "[[.ProcessMigration.TerminationRoute.Key]]"
+            #[[end]]
+            #[[if ne .ProcessMigration.TerminationRoute.Certificate ""]]
+            certificate: "[[.ProcessMigration.TerminationRoute.Certificate]]"
+            #[[end]]
+            #[[if ne .ProcessMigration.TerminationRoute.CaCertificate ""]]
+            caCertificate: "[[.ProcessMigration.TerminationRoute.CaCertificate]]"
+            #[[end]]
         #[[end]]
 ## KIE ProcessMigration END
 
