--- a/deploy/crs/v2/snippets/auth_ldap.yaml
+++ b/deploy/crs/v2/snippets/auth_ldap.yaml
@@ -13,6 +13,7 @@ spec:
       url: ldaps://myldap.example.com
       bindDN: uid=admin,ou=users,ou=exmample,ou=com
       bindCredential: s3cret
+      allowEmptyPasswords: true
       baseCtxDN: ou=users,ou=example,ou=com
       baseFilter: uid
       recursiveSearch: true
