--- a/rhpam-config/7.13.0/common.yaml
+++ b/rhpam-config/7.13.0/common.yaml
@@ -180,6 +180,8 @@ console:
                     value: "[[.Auth.LDAP.BindDN]]"
                   - name: AUTH_LDAP_BIND_CREDENTIAL
                     value: "[[.Auth.LDAP.BindCredential]]"
+                  - name: AUTH_LDAP_ALLOW_EMPTY_PASSWORDS
+                    value: "[[.Auth.LDAP.AllowEmptyPasswords]]"
                   - name: AUTH_LDAP_BASE_CTX_DN
                     value: "[[.Auth.LDAP.BaseCtxDN]]"
                   - name: AUTH_LDAP_BASE_FILTER
@@ -879,6 +881,8 @@ servers:
                       value: "[[$.Auth.LDAP.BindDN]]"
                     - name: AUTH_LDAP_BIND_CREDENTIAL
                       value: "[[$.Auth.LDAP.BindCredential]]"
+                    - name: AUTH_LDAP_ALLOW_EMPTY_PASSWORDS
+                      value: "[[$.Auth.LDAP.AllowEmptyPasswords]]"
                     - name: AUTH_LDAP_BASE_CTX_DN
                       value: "[[$.Auth.LDAP.BaseCtxDN]]"
                     - name: AUTH_LDAP_BASE_FILTER
