--- a/deploy/olm-catalog/test/7.13.0-1/manifests/businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/test/7.13.0-1/manifests/businessautomation-operator.clusterserviceversion.yaml
@@ -7,10 +7,12 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry-proxy.engineering.redhat.com/rh-osbs/rhpam-7-rhpam-rhel8-operator:7.13.0
-    createdAt: "2022-03-23 11:50:29"
+    createdAt: "2022-03-24 15:07:49"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat
       Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
+    operators.openshift.io/valid-subscription: '["Red Hat Process Automation Manager",
+      "Red Hat Decision Manager"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
     support: Red Hat
     tectonic-visibility: ocs
@@ -18,7 +20,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.13.0-1-dev-p9crrjkc6c
+  name: businessautomation-operator.7.13.0-1-dev-z92nkdk6pd
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -402,7 +404,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.13.0-1-dev-p9crrjkc6c
+    operated-by: businessautomation-operator.7.13.0-1-dev-z92nkdk6pd
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -414,9 +416,9 @@ spec:
   maturity: test
   provider:
     name: Red Hat
-  replaces: businessautomation-operator.7.12.1-2
+  replaces: businessautomation-operator.7.12.1-1
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.13.0-1-dev-p9crrjkc6c
-  version: 7.13.0-1+p9crrjkc6c
+      operated-by: businessautomation-operator.7.13.0-1-dev-z92nkdk6pd
+  version: 7.13.0-1+z92nkdk6pd
