--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -107,3 +107,4 @@ spec:
         imagePullPolicy: Always
         name: business-automation-operator
         resources: {}
+      serviceAccountName: business-automation-operator
